# soundcloud-sync

./: README.md  angular.json  package-lock.json  package.json  tsconfig.json
.github/workflows/: tauri-build.yml
src/: index.html  main.ts  styles.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/app/: app.config.ts  app.html  app.routes.ts  app.scss  app.ts
src/app/components/auth-callback/: auth-callback.html  auth-callback.scss  auth-callback.ts
src/app/components/home/: home.html  home.scss  home.ts
src/app/interceptors/: auth.interceptor.ts
src/app/models/: soundcloud.model.ts  sync.model.ts
src/app/services/: global-error-handler.ts  pkce.ts  soundcloud-auth.service.ts  soundcloud.service.ts  sync.service.ts
